--- a/src/renderer/assets/css/table.css
+++ b/src/renderer/assets/css/table.css
@@ -57,3 +57,9 @@
     border-radius: 4px;
     margin-bottom: 1.5%;
 }
+
+.text-div {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
